# federated_rl

./: .gitignore  README.md  configure.sh  demo.py  main.py  pyproject.toml  train.py  trained_model.safetensors
trained_model/400/default/: checkpoint
